crates/aranya-policy-lang/tests/data/ffi_use/underscore.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Syntax error
  |
  = note:  --> 1:5
            |
          1 | use _
            |     ^---
            |
            = expected identifier
